<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.bandahealth.idempiere</groupId>
	<version>11.0.0-SNAPSHOT</version>
	<artifactId>org.bandahealth.idempiere</artifactId>
	<packaging>pom</packaging>

	<properties>
		<tycho.version>3.0.5</tycho.version>
		<tycho.extras.version>${tycho.version}</tycho.extras.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.dependency.version>3.1.1</maven.dependency.version>
		<download.maven.version>1.4.1</download.maven.version>
		<lifecycle.mapping.version>1.0.0</lifecycle.mapping.version>
		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
		<url.file.srv>https://raw.githubusercontent.com/idempiere/binary.file/master</url.file.srv>
		<idempiere.core.repository.url>file://${idempiere.home.dir}/org.idempiere.p2/target/repository</idempiere.core.repository.url>
		<maven.compiler.release>17</maven.compiler.release>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${maven-clean-plugin.version}</version>
				</plugin>
				<plugin>
					<!-- https://www.eclipse.org/m2e/documentation/m2e-execution-not-covered.html -->
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>${lifecycle.mapping.version}</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>com.googlecode.maven-download-plugin</groupId>
										<artifactId>download-maven-plugin</artifactId>
										<versionRange>[1.0.0,)</versionRange>
										<goals>
											<goal>wget</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-clean-plugin</artifactId>
										<versionRange>[2.5,)</versionRange>
										<goals>
											<goal>clean</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore/>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-dependency-plugin
										</artifactId>
										<versionRange>
											[3.1.1,)
										</versionRange>
										<goals>
											<goal>copy</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>		        	
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<verbose>true</verbose>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>com.googlecode.maven-download-plugin</groupId>
					<artifactId>download-maven-plugin</artifactId>
					<version>${download.maven.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-director-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho.extras</groupId>
					<artifactId>tycho-p2-extras-plugin</artifactId>
					<version>${tycho.extras.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-publisher-plugin</artifactId>
					<version>${tycho.extras.version}</version>
				</plugin>
				<plugin>
					<groupId>com.coderplus.maven.plugins</groupId>
					<artifactId>copy-rename-maven-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${maven.dependency.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<!-- enable the Tycho build extension -->
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			
			<!-- enable source bundle generation -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>${maven-clean-plugin.version}</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>${idempiere.home.dir}/migration/i7.0-bh</directory>
						</fileset>
						<fileset>
							<directory>${idempiere.home.dir}/migration/local_sql</directory>
						</fileset>
						<fileset>
							<directory>${idempiere.home.dir}/migration/zip_2pack</directory>
						</fileset>
						<fileset>
							<directory>${project.basedir}/testing/data</directory>
						</fileset>
						<fileset>
							<directory>${project.basedir}/testing/migration</directory>
						</fileset>
						<fileset>
							<directory>${project.basedir}/testing/plugins</directory>
						</fileset>
						<fileset>
							<directory>${project.basedir}/testing/reports</directory>
						</fileset>
					</filesets>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>copy-data-for-testing</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/testing/data</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}/data</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-data-for-idempiere</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${idempiere.home.dir}/data</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}/data</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-migrations-for-testing</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<overwrite>true</overwrite>
							<outputDirectory>${project.basedir}/testing/migration</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}/migration</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-migrations-for-idempiere</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<overwrite>true</overwrite>
							<outputDirectory>${idempiere.home.dir}/migration</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}/migration</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
	    <profile>
			<id>build.idempiere.bandahealth</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<repositories>
				<repository>
					<id>idempiere-core</id>
					<url>${idempiere.core.repository.url}</url>
					<layout>p2</layout>
				</repository>
			    <repository>
				    <id>Central</id>
				    <url>http://central.maven.org/maven2</url>
			    </repository>
			    <repository>
		            <id>jenkins</id>
		            <url>http://repo.jenkins-ci.org/releases</url>
	            </repository>
			</repositories>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>target-platform-configuration</artifactId>
						<version>${tycho.version}</version>
						<configuration>
							<environments>
								<environment>
									<os>linux</os>
									<ws>gtk</ws>
									<arch>x86_64</arch>
								</environment>
								<environment>
									<os>win32</os>
									<ws>win32</ws>
									<arch>x86_64</arch>
								</environment>
							</environments>
							<dependency-resolution>
								<extraRequirements>
									<requirement>
										<type>eclipse-plugin</type>
										<id>org.eclipse.core.runtime</id>
										<versionRange>0.0.0</versionRange>
									</requirement>
									<requirement>
										<type>eclipse-plugin</type>
										<id>org.eclipse.equinox.common</id>
										<versionRange>0.0.0</versionRange>
									</requirement>
								</extraRequirements>
							</dependency-resolution>
							<executionEnvironmentDefault>JavaSE-17</executionEnvironmentDefault>
							<executionEnvironment>JavaSE-17</executionEnvironment>
						</configuration>
					</plugin>
				</plugins>
			</build>
	    </profile>
	</profiles>

	<modules>
		<module>chuck-test-framework</module>
		<module>base</module>
		<module>base-test</module>
		<module>graphql</module>
		<module>graphql-feature</module>
		<module>graphql-test</module>
		<module>reports</module>
		<module>reports-test</module>
		<module>rest</module>
		<module>rest-test</module>
	</modules>
</project>
